@@ -80,7 +80,8 @@ class FourViewsLayout(MapLayout):
           "vangle": 0.0}
 
         self.View3D.info = {
-          "type": "3D"}     # 3D view
+          "type": "3D",     # 3D view
+          "viewname": "editors3Dview"}
 
     #
     # The following function is called when the configuration changed.
@@ -353,6 +354,9 @@ LayoutsList.append(FourViewsLayout2)
 #
 #
 # $Log$
+# Revision 1.5  2005/10/15 00:49:51  cdunde
+# To reinstate headers and history
+#
 # Revision 1.2  2000/06/03 10:25:30  alexander
 # added cvs headers
 #
